--- a/buildbot/master/master.cfg
+++ b/buildbot/master/master.cfg
@@ -91,7 +91,7 @@ from buildbot.plugins import schedulers
 
 c['schedulers'].append(schedulers.ForceScheduler(
                             name='force',
-                            builderNames=['monero-tests-ubuntu-16.04-i686','monero-tests-windows-10-i686','monero-tests-freebsd-10.3-amd64','monero-tests-ubuntu-16.04-amd64','monero-tests-osx-10.11','monero-tests-osx-10.10','monero-tests-osx-10.12','monero-tests-ubuntu-16.04-armv7','monero-tests-debian-armv8','monero-tests-windows-10-amd64','monero-core-win32','monero-core-win64','monero-core-freebsd','monero-core-ubuntu-arm7','monero-core-debian-armv8','kovri-all-freebsd64','kovri-all-osx-10.12','kovri-all-osx-10.10','kovri-all-osx-10.11','kovri-all-ubuntu-arm7','kovri-all-ubuntu-i686','kovri-all-win32','kovri-all-win64','kovri-all-debian-arm8','kovri-all-ubuntu-amd64','monero-core-osx-10.12','monero-core-osx-10.11','monero-core-ubuntu-amd64','monero-core-ubuntu-i686','monero-static-osx-10.10','monero-static-osx-10.11','monero-static-win32','monero-static-win64','monero-static-ubuntu-amd64','monero-static-freebsd64','monero-static-ubuntu-arm7','monero-static-debian-armv8','monero-static-ubuntu-i686','monero-static-osx-10.12']))
+                            builderNames=['kovri-static-win32','kovri-static-win64','kovri-static-freebsd64','kovri-static-osx','kovri-static-ubuntu-amd64','kovri-static-ubuntu-i686','kovri-static-ubuntu-arm7','kovri-static-debian-arm8','monero-tests-ubuntu-16.04-i686','monero-tests-windows-10-i686','monero-tests-freebsd-10.3-amd64','monero-tests-ubuntu-16.04-amd64','monero-tests-osx-10.11','monero-tests-osx-10.10','monero-tests-osx-10.12','monero-tests-ubuntu-16.04-armv7','monero-tests-debian-armv8','monero-tests-windows-10-amd64','monero-core-win32','monero-core-win64','monero-core-freebsd','monero-core-ubuntu-arm7','monero-core-debian-armv8','kovri-all-freebsd64','kovri-all-osx-10.12','kovri-all-osx-10.10','kovri-all-osx-10.11','kovri-all-ubuntu-arm7','kovri-all-ubuntu-i686','kovri-all-win32','kovri-all-win64','kovri-all-debian-arm8','kovri-all-ubuntu-amd64','monero-core-osx-10.12','monero-core-osx-10.11','monero-core-ubuntu-amd64','monero-core-ubuntu-i686','monero-static-osx-10.10','monero-static-osx-10.11','monero-static-win32','monero-static-win64','monero-static-ubuntu-amd64','monero-static-freebsd64','monero-static-ubuntu-arm7','monero-static-debian-armv8','monero-static-ubuntu-i686','monero-static-osx-10.12']))
 
 c['schedulers'].append(schedulers.SingleBranchScheduler(
             name='monero PR builder',
@@ -120,6 +120,15 @@ c['schedulers'].append(schedulers.Nightly(
 		       minute=0,
                        change_filter=util.ChangeFilter(repository='https://github.com/monero-project/monero.git'),
 		       onlyIfChanged=True))
+
+c['schedulers'].append(schedulers.Nightly(
+                       name='Kovri Nightly',
+                       branch='master',
+                       builderNames=['kovri-static-win32','kovri-static-win64','kovri-static-freebsd64','kovri-static-osx','kovri-static-ubuntu-amd64','kovri-static-ubuntu-i686','kovri-static-ubuntu-arm7','kovri-static-debian-arm8'],
+                       hour=6, 
+                       minute=0,
+                       change_filter=util.ChangeFilter(repository='https://github.com/monero-project/kovri.git'),
+                       onlyIfChanged=False))
 
 # thanks m-labs https://github.com/m-labs/buildbot-config/blob/master/master.cfg
 def addCoverallsUploadSteps(factory, repo_token):
@@ -285,6 +294,71 @@ kovriMingw64Factory.addStep(steps.Compile(command=["make", "all-options"],env={'
 kovriMingw64Factory.addStep(steps.Compile(name="compile tests", command=["make", "tests"]))
 kovriMingw64Factory.addStep(steps.Test(command=["kovri-tests.exe"], workdir="build/build"))
 kovriMingw64Factory.addStep(steps.Test(name="banchmark", command=["kovri-benchmarks.exe"], workdir="build/build"))
+
+kovriStaticFactory = util.BuildFactory()
+kovriStaticFactory.addStep(steps.Git(repourl='https://github.com/monero-project/kovri.git', mode='full', submodules=True))
+kovriStaticFactory.addStep(steps.Compile(command=["make", "release-static"]))
+kovriStaticFactory.addStep(steps.RemoveDirectory(dir='kovri-install', hideStepIf=True))
+kovriStaticFactory.addStep(steps.ShellCommand(name='get installer script', hideStepIf=True, workdir='kovri-install', command=['wget', 'https://github.com/monero-project/meta/raw/master/kovri/install.sh']))
+kovriStaticFactory.addStep(steps.ShellCommand(name='set installer mode', workdir='kovri-install', hideStepIf=True, command=['chmod', 'u+x', 'install.sh']))
+kovriStaticFactory.addStep(steps.CopyDirectory(name='copy pkg/config', src='build/pkg/config', dest='kovri-install/config'))
+kovriStaticFactory.addStep(steps.CopyDirectory(name='copy pkg/client', src='build/pkg/client', dest='kovri-install/client'))
+kovriStaticFactory.addStep(steps.ShellCommand(name='copy binary', command=['cp', 'build/kovri', '../kovri-install']))
+kovriStaticFactory.addStep(steps.SetPropertyFromCommand(name = "set version", hideStepIf=True, command = ["git", "rev-parse", "--short", "HEAD"], property = 'gitversion'))
+kovriStaticFactory.addStep(steps.ShellCommand(name='create installer', command=['makeself', '../kovri-install', 'build/kovri-install.sh', WithProperties("Kovri-%(gitversion)s Static Installer"), './install.sh']))
+kovriStaticFactory.addStep(steps.FileUpload(slavesrc="build/kovri-install.sh", masterdest=WithProperties("/home/buildbot/master/public_html/downloads/kovri-%(gitversion)s-%(platform)s-install.sh"), url=WithProperties("https://build.getmonero.org/downloads/kovri-%(gitversion)s-%(platform)s-install.sh")))
+
+kovriStaticArmFactory = util.BuildFactory()
+kovriStaticArmFactory.addStep(steps.Git(repourl='https://github.com/monero-project/kovri.git', mode='full', submodules=True))
+kovriStaticArmFactory.addStep(steps.Compile(command=["make", "release-static"]))
+kovriStaticArmFactory.addStep(steps.RemoveDirectory(dir='kovri-install', hideStepIf=True))
+kovriStaticArmFactory.addStep(steps.ShellCommand(name='get installer script', workdir='kovri-install', hideStepIf=True, command=['wget', 'https://github.com/monero-project/meta/raw/master/kovri/install.sh']))
+kovriStaticArmFactory.addStep(steps.ShellCommand(name='set installer mode', workdir='kovri-install', hideStepIf=True, command=['chmod', 'u+x', 'install.sh']))
+kovriStaticArmFactory.addStep(steps.CopyDirectory(name='copy pkg/config', src='build/pkg/config', dest='kovri-install/config'))
+kovriStaticArmFactory.addStep(steps.CopyDirectory(name='copy pkg/client', src='build/pkg/client', dest='kovri-install/client'))
+kovriStaticArmFactory.addStep(steps.ShellCommand(name='copy binary', command=['cp', 'build/kovri', '../kovri-install']))
+kovriStaticArmFactory.addStep(steps.SetPropertyFromCommand(name = "set version", hideStepIf=True, command = ["git", "rev-parse", "--short", "HEAD"], property = 'gitversion'))
+kovriStaticArmFactory.addStep(steps.ShellCommand(name='create installer', command=['makeself', '../kovri-install', 'build/kovri-install.sh', WithProperties("Kovri-%(gitversion)s Static Installer"), './install.sh']))
+kovriStaticArmFactory.addStep(steps.FileUpload(slavesrc="build/kovri-install.sh", masterdest=WithProperties("/home/buildbot/master/public_html/downloads/kovri-%(gitversion)s-%(platform)s-install.sh"), url=WithProperties("https://build.getmonero.org/downloads/kovri-%(gitversion)s-%(platform)s-install.sh")))
+
+kovriStaticFreebsdFactory = util.BuildFactory()
+kovriStaticFreebsdFactory.addStep(steps.Git(repourl='https://github.com/monero-project/kovri.git', mode='full', submodules=True))
+kovriStaticFreebsdFactory.addStep(steps.Compile(command=["gmake", "release-static"], env={'CC': 'clang36', 'CXX': 'clang++36'}))
+kovriStaticFreebsdFactory.addStep(steps.RemoveDirectory(dir='kovri-install', hideStepIf=True))
+kovriStaticFreebsdFactory.addStep(steps.ShellCommand(name='fetch installer script', workdir='kovri-install', hideStepIf=True, command=['wget', 'https://github.com/monero-project/meta/raw/master/kovri/install.sh']))
+kovriStaticFreebsdFactory.addStep(steps.ShellCommand(name='set installer mode', workdir='kovri-install', hideStepIf=True, command=['chmod', 'u+x', 'install.sh']))
+kovriStaticFreebsdFactory.addStep(steps.CopyDirectory(name='copy pkg/config', src='build/pkg/config', dest='kovri-install/config'))
+kovriStaticFreebsdFactory.addStep(steps.CopyDirectory(name='copy pkg/client', src='build/pkg/client', dest='kovri-install/client'))
+kovriStaticFreebsdFactory.addStep(steps.ShellCommand(name='copy binary', command=['cp', 'build/kovri', '../kovri-install']))
+kovriStaticFreebsdFactory.addStep(steps.SetPropertyFromCommand(name = "set version", hideStepIf=True, command = ["git", "rev-parse", "--short", "HEAD"], property = 'gitversion'))
+kovriStaticFreebsdFactory.addStep(steps.ShellCommand(name='create installer', command=['makeself', '../kovri-install', 'build/kovri-install.sh', WithProperties("Kovri-%(gitversion)s Static Installer"), './install.sh']))
+kovriStaticFreebsdFactory.addStep(steps.FileUpload(slavesrc="build/kovri-install.sh", masterdest=WithProperties("/home/buildbot/master/public_html/downloads/kovri-%(gitversion)s-%(platform)s-install.sh"), url=WithProperties("https://build.getmonero.org/downloads/kovri-%(gitversion)s-%(platform)s-install.sh")))
+
+kovriStaticWin32Factory = util.BuildFactory()
+kovriStaticWin32Factory.addStep(steps.Git(repourl='https://github.com/monero-project/kovri.git', mode='full', submodules=True))
+kovriStaticWin32Factory.addStep(steps.Compile(command=["make", "release-static"],env={'MSYSTEM': "MINGW32"}))
+kovriStaticWin32Factory.addStep(steps.RemoveDirectory(dir='kovri-install', hideStepIf=True))
+kovriStaticWin32Factory.addStep(steps.ShellCommand(name='get installer script', hideStepIf=True, workdir='kovri-install', command=['wget', 'https://github.com/monero-project/meta/raw/master/kovri/install.sh']))
+kovriStaticWin32Factory.addStep(steps.ShellCommand(name='set installer mode', workdir='kovri-install', hideStepIf=True, command=['chmod', 'u+x', 'install.sh']))
+kovriStaticWin32Factory.addStep(steps.CopyDirectory(name='copy pkg/config', src='build/pkg/config', dest='kovri-install/config'))
+kovriStaticWin32Factory.addStep(steps.CopyDirectory(name='copy pkg/client', src='build/pkg/client', dest='kovri-install/client'))
+kovriStaticWin32Factory.addStep(steps.ShellCommand(name='copy binary', command=['cp', 'build/kovri', '../kovri-install']))
+kovriStaticWin32Factory.addStep(steps.SetPropertyFromCommand(name = "set version", hideStepIf=True, command = ["git", "rev-parse", "--short", "HEAD"], property = 'gitversion'))
+kovriStaticWin32Factory.addStep(steps.ShellCommand(name='create installer', command=['/msys32/usr/bin/bash.exe', '/usr/local/bin/makeself.sh', '../kovri-install', 'build/kovri-install.sh', WithProperties("Kovri-%(gitversion)s Static Installer"), './install.sh']))
+kovriStaticWin32Factory.addStep(steps.FileUpload(slavesrc="build/kovri-install.sh", masterdest=WithProperties("/home/buildbot/master/public_html/downloads/kovri-%(gitversion)s-%(platform)s-install.sh"), url=WithProperties("https://build.getmonero.org/downloads/kovri-%(gitversion)s-%(platform)s-install.sh")))
+
+kovriStaticWin64Factory = util.BuildFactory()
+kovriStaticWin64Factory.addStep(steps.Git(repourl='https://github.com/monero-project/kovri.git', mode='full', submodules=True))
+kovriStaticWin64Factory.addStep(steps.Compile(command=["make", "release-static"],env={'MSYSTEM': "MINGW64"}))
+kovriStaticWin64Factory.addStep(steps.RemoveDirectory(dir='kovri-install', hideStepIf=True))
+kovriStaticWin64Factory.addStep(steps.ShellCommand(name='get installer script', hideStepIf=True, workdir='kovri-install', command=['wget', 'https://github.com/monero-project/meta/raw/master/kovri/install.sh']))
+kovriStaticWin64Factory.addStep(steps.ShellCommand(name='set installer mode', workdir='kovri-install', hideStepIf=True, command=['chmod', 'u+x', 'install.sh']))
+kovriStaticWin64Factory.addStep(steps.CopyDirectory(name='copy pkg/config', src='build/pkg/config', dest='kovri-install/config'))
+kovriStaticWin64Factory.addStep(steps.CopyDirectory(name='copy pkg/client', src='build/pkg/client', dest='kovri-install/client'))
+kovriStaticWin64Factory.addStep(steps.ShellCommand(name='copy binary', command=['cp', 'build/kovri', '../kovri-install']))
+kovriStaticWin64Factory.addStep(steps.SetPropertyFromCommand(name = "set version", hideStepIf=True, command = ["git", "rev-parse", "--short", "HEAD"], property = 'gitversion'))
+kovriStaticWin64Factory.addStep(steps.ShellCommand(name='create installer', command=['/msys64/usr/bin/bash.exe', '/usr/local/bin/makeself.sh', '../kovri-install', 'build/kovri-install.sh', WithProperties("Kovri-%(gitversion)s Static Installer"), './install.sh']))
+kovriStaticWin64Factory.addStep(steps.FileUpload(slavesrc="build/kovri-install.sh", masterdest=WithProperties("/home/buildbot/master/public_html/downloads/kovri-%(gitversion)s-%(platform)s-install.sh"), url=WithProperties("https://build.getmonero.org/downloads/kovri-%(gitversion)s-%(platform)s-install.sh")))
 
 coreUbuntu64Factory = util.BuildFactory()
 coreUbuntu64Factory.addStep(steps.Git(repourl='https://github.com/monero-project/monero-core.git', mode='full'))
@@ -631,6 +705,45 @@ c['builders'].append(
       slavenames=["arm8"],
       factory=testsFactory))
 
+c['builders'].append(
+    util.BuilderConfig(name="kovri-static-ubuntu-i686",
+      slavenames=["linux-i386"],
+      factory=kovriStaticFactory))
+
+c['builders'].append(
+    util.BuilderConfig(name="kovri-static-osx",
+      slavenames=["osx-10.10"],
+      factory=kovriStaticFactory))
+
+c['builders'].append(
+    util.BuilderConfig(name="kovri-static-ubuntu-amd64",
+      slavenames=["linux-amd64"],
+      factory=kovriStaticFactory))
+
+c['builders'].append(
+    util.BuilderConfig(name="kovri-static-ubuntu-arm7",
+      slavenames=["arm7"],
+      factory=kovriStaticArmFactory))
+
+c['builders'].append(
+    util.BuilderConfig(name="kovri-static-debian-arm8",
+      slavenames=["arm8"],
+      factory=kovriStaticArmFactory))
+
+c['builders'].append(
+    util.BuilderConfig(name="kovri-static-freebsd64",
+      slavenames=["freebsd64"],
+      factory=kovriStaticFreebsdFactory))
+
+c['builders'].append(
+    util.BuilderConfig(name="kovri-static-win32",
+      slavenames=["win32"],
+      factory=kovriStaticWin32Factory))
+
+c['builders'].append(
+    util.BuilderConfig(name="kovri-static-win64",
+      slavenames=["win64"],
+      factory=kovriStaticWin64Factory))
 
 # STATUS TARGETS
 
